#
# $Id: Makefile.am,v 1.3 2002-04-10 07:32:46 lecroart Exp $
#

SUBDIRS			= texture_croisi

clientdir		= ${database}/data/maps
client_DATA		= flare01.tga			\
			  flare03.tga			\
			  flare04.tga			\
			  flare05.tga			\
			  flare06.tga			\
			  flare07.tga			\
			  GlowRays.tga			\
			  gnu_collar.tga		\
			  gnu_dos.tga			\
			  gnu_feet.tga			\
			  gnu_head.tga			\
			  gnu_hoof.tga			\
			  gnu_horn.tga			\
			  gnu_kilt.tga			\
			  gnu_knee.tga			\
			  gnu_manche.tga		\
			  gnu_slip.tga			\
			  gnu_torso.tga			\
			  Igloo_2.tga			\
			  Igloo.tga			\
			  marble.tga			\
			  Neigecloud.tga		\
			  neigeExplo.tga		\
			  neige.tga			\
			  nel128.tga			\
			  nel_coarse_texture.tga	\
			  nevrax.tga			\
			  pine_tree.tga			\
			  pine_wood.tga			\
			  refpingoo_BK.tga		\
			  refpingoo_DN.tga		\
			  refpingoo_FR.tga		\
			  refpingoo_LF.tga		\
			  refpingoo_RT.tga		\
			  refpingoo_UP.tga		\
			  sky_pingoo.tga		\
			  snowman_face.tga		\
			  snowman.tga			\
			  Streak.tga			\
			  top_igloo.tga			\
			  tree_bot.tga			\
			  tree_top.tga			\
			  tronc.tga

# End of Makefile.am
