#
# $Id: Makefile.am,v 1.3 2002-04-10 07:32:46 lecroart Exp $
#

clientdir		= ${database}/data/shapes
client_DATA		= aim.shape			\
			  appear.ps			\
			  disappear.ps			\
			  gnu.shape			\
			  nel_logo.shape		\
			  PI_PO_gnu_stat_A.shape	\
			  PI_PO_Igloo_A.shape		\
			  PI_PO_Igloo_B.shape		\
			  PI_PO_pinetree_A.shape	\
			  PI_PO_pingoo_stat_A.shape	\
			  PI_PO_snowman_A.shape		\
			  PI_PO_tree_A.shape		\
			  sky.shape			\
			  snowball.shape		\
			  snow.ps

# End of Makefile.am
