#
# $Id: Makefile.am,v 1.3 2002-04-10 07:32:46 lecroart Exp $
#

clientdir		= ${database}/data/zones
client_DATA		= 3_AC.zonel	\
			  3_AD.zonel	\
			  3_AE.zonel	\
			  3_AF.ig	\
			  3_AF.zonel	\
			  3_AG.ig	\
			  3_AG.zonel	\
			  3_AH.zonel	\
			  3_AI.ig	\
			  3_AI.zonel	\
			  3_AJ.ig	\
			  3_AJ.zonel	\
			  3_AK.zonel	\
			  3_AL.ig	\
			  3_AL.zonel	\
			  3_AM.zonel	\
			  3_AN.ig	\
			  3_AN.zonel	\
			  3_AO.ig	\
			  3_AO.zonel	\
			  3_AP.zonel	\
			  3_AQ.ig	\
			  3_AQ.zonel	\
			  3_AR.ig	\
			  3_AR.zonel	\
			  4_AC.zonel	\
			  4_AD.zonel	\
			  4_AE.zonel	\
			  4_AF.zonel	\
			  4_AG.zonel	\
			  4_AH.ig	\
			  4_AH.zonel	\
			  4_AI.ig	\
			  4_AI.zonel	\
			  4_AJ.ig	\
			  4_AJ.zonel	\
			  4_AK.ig	\
			  4_AK.zonel	\
			  4_AL.zonel	\
			  4_AM.ig	\
			  4_AM.zonel	\
			  4_AN.ig	\
			  4_AN.zonel	\
			  4_AO.zonel	\
			  4_AP.ig	\
			  4_AP.zonel	\
			  4_AQ.ig	\
			  4_AQ.zonel	\
			  4_AR.ig	\
			  4_AR.zonel	\
			  5_AC.zonel	\
			  5_AD.ig	\
			  5_AD.zonel	\
			  5_AE.zonel	\
			  5_AF.ig	\
			  5_AF.zonel	\
			  5_AG.zonel	\
			  5_AH.zonel	\
			  5_AI.ig	\
			  5_AI.zonel	\
			  5_AJ.ig	\
			  5_AJ.zonel	\
			  5_AK.ig	\
			  5_AK.zonel	\
			  5_AL.ig	\
			  5_AL.zonel	\
			  5_AM.zonel	\
			  5_AN.ig	\
			  5_AN.zonel	\
			  5_AO.ig	\
			  5_AO.zonel	\
			  5_AP.ig	\
			  5_AP.zonel	\
			  5_AQ.ig	\
			  5_AQ.zonel	\
			  5_AR.zonel	\
			  6_AC.zonel	\
			  6_AD.zonel	\
			  6_AE.zonel	\
			  6_AF.zonel	\
			  6_AG.ig	\
			  6_AG.zonel	\
			  6_AH.ig	\
			  6_AH.zonel	\
			  6_AI.ig	\
			  6_AI.zonel	\
			  6_AJ.ig	\
			  6_AJ.zonel	\
			  6_AK.ig	\
			  6_AK.zonel	\
			  6_AL.ig	\
			  6_AL.zonel	\
			  6_AM.zonel	\
			  6_AN.ig	\
			  6_AN.zonel	\
			  6_AO.ig	\
			  6_AO.zonel	\
			  6_AP.zonel	\
			  6_AQ.ig	\
			  6_AQ.zonel	\
			  6_AR.ig	\
			  6_AR.zonel	\
			  7_AC.zonel	\
			  7_AD.zonel	\
			  7_AE.zonel	\
			  7_AF.zonel	\
			  7_AG.zonel	\
			  7_AH.zonel	\
			  7_AI.zonel	\
			  7_AJ.ig	\
			  7_AJ.zonel	\
			  7_AK.ig	\
			  7_AK.zonel	\
			  7_AL.ig	\
			  7_AL.zonel	\
			  7_AM.ig	\
			  7_AM.zonel	\
			  7_AN.ig	\
			  7_AN.zonel	\
			  7_AO.ig	\
			  7_AO.zonel	\
			  7_AP.zonel	\
			  7_AQ.zonel	\
			  7_AR.ig	\
			  7_AR.zonel	\
			  8_AC.zonel	\
			  8_AD.zonel	\
			  8_AE.zonel	\
			  8_AF.zonel	\
			  8_AG.ig	\
			  8_AG.zonel	\
			  8_AH.zonel	\
			  8_AI.zonel	\
			  8_AJ.ig	\
			  8_AJ.zonel	\
			  8_AK.ig	\
			  8_AK.zonel	\
			  8_AL.ig	\
			  8_AL.zonel	\
			  8_AM.zonel	\
			  8_AN.ig	\
			  8_AN.zonel	\
			  8_AO.zonel	\
			  8_AP.ig	\
			  8_AP.zonel	\
			  8_AQ.zonel	\
			  8_AR.ig	\
			  8_AR.zonel

# End of Makefile.am
