FILE(GLOB SRC *.cpp *.h)

ADD_EXECUTABLE(scriptsample		${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/wwscript/include)
TARGET_LINK_LIBRARIES(scriptsample	${PLATFORM_LINKFLAGS} 
								${LIBXML2_LIBRARIES} 
								${NELMISC_LIBRARY} 
								${NELGEORGES_LIBRARY} 
								wwcommon
								wwscript)
IF(WIN32)
  SET_TARGET_PROPERTIES(scriptsample PROPERTIES 
	LINK_FLAGS "/NODEFAULTLIB:libcmt /SUBSYSTEM:CONSOLE"
	PROJECT_LABEL "Samples: Script Sample")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS scriptsample RUNTIME DESTINATION bin)
