FILE(GLOB SRC *.cpp *.h)

LIST(REMOVE_ITEM SRC
	${CMAKE_CURRENT_SOURCE_DIR}/CTimeTask.h
        ${CMAKE_CURRENT_SOURCE_DIR}/CTimeTask.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CPacsTask.h
        ${CMAKE_CURRENT_SOURCE_DIR}/CPacsTask.cpp)

DECORATE_NEL_LIB("wwcommon")
SET(WWCOMMON_LIB ${LIBNAME})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_EXECUTABLE(ww_frontend ${SRC})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# On Unix we'll need to include config.h
IF(UNIX)
  INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
ENDIF(UNIX)


INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS} ${CEGUI_INCLUDE_DIRS} ${PYTHON_INCLUDE_PATH} ${PNG_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(ww_frontend	${PLATFORM_LINKFLAGS} 
								${LIBXML2_LIBRARIES} 
								${NELMISC_LIBRARY} 
								${NELPACS_LIBRARY} 
								${NELNET_LIBRARY} 
								${NELLIGO_LIBRARY} 
								${NELGEORGES_LIBRARY} 
								${NEL3D_LIBRARY} 
								${JPEG_LIBRARY} 
								${FREETYPE_LIBRARY} 
								${WWCOMMON_LIB} 
								${PYTHON_LIBRARIES} 
								${Boost_LIBRARIES} 
								${PNG_LIBRARIES}
								${MYSQL_LIBRARIES})
IF(WIN32)
  SET_TARGET_PROPERTIES(ww_frontend PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt /SUBSYSTEM:WINDOWS")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS ww_frontend RUNTIME DESTINATION sbin COMPONENT services)
INSTALL(FILES service_frontend.cfg DESTINATION share/werewolf/ COMPONENT services)
