FILE(GLOB SRC *.cpp)
FILE(GLOB PRIV_H *.h)
FILE(GLOB PUB_H ../include/wwcommon/*.h)

#SOURCE_GROUP(headers FILES ${PRIV_H} ${PUB_H})

DECORATE_NEL_LIB("wwcommon")
SET(WWCOMMON_LIB ${LIBNAME})


IF(NOT WIN32)
  ADD_LIBRARY(${WWCOMMON_LIB} SHARED ${SRC})
ELSE(NOT WIN32)
  ADD_LIBRARY(${WWCOMMON_LIB} STATIC ${SRC})
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${WWCOMMON_LIB} ${NELMISC_LIBRARY})
SET_TARGET_PROPERTIES(${WWCOMMON_LIB} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
  SET_TARGET_PROPERTIES(${WWCOMMON_LIB} PROPERTIES COMPILE_FLAGS "/Yustdpch.h")
  SET_SOURCE_FILES_PROPERTIES(stdpch.cpp PROPERTIES COMPILE_FLAGS "/Ycstdpch.h")
  SET_TARGET_PROPERTIES(${WWCOMMON_LIB} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS ${WWCOMMON_LIB} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
