FILE(GLOB SRC *.cpp )
FILE(GLOB AS_SRC angelscript/*.cpp angelscript/*.h)
FILE(GLOB PRIV_H *.h)
FILE(GLOB SE_PUB_H ../include/wwscript/ScriptEngine/*.h)
FILE(GLOB SB_PUB_H ../include/wwscript/ScriptBindings/*.h)
FILE(GLOB GP_PUB_H ../include/wwscript/GlobalProperty/*.h)
FILE(GLOB SCRIPT_BINDINGS bindery/*.cpp bindery/*.h)

LIST(REMOVE_ITEM AS_SRC	${CMAKE_CURRENT_SOURCE_DIR}/angelscript/as_callfunc_x64_gcc.cpp )

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/wwscript/include ${CMAKE_CURRENT_SOURCE_DIR}/angelscript ${CMAKE_CURRENT_SOURCE_DIR}/bindery ${Boost_INCLUDE_DIR})

SOURCE_GROUP(AngelScript FILES ${AS_SRC})
SOURCE_GROUP(ScriptEngine FILES ${SRC} ${PRIV_H} ${SE_PUB_H})
SOURCE_GROUP(ScriptBindings FILES ${SB_PUB_H} ${SCRIPT_BINDINGS})
SOURCE_GROUP(GlobalProperty FILES ${GP_PUB_H})


IF(NOT WIN32)
  ADD_LIBRARY(wwscript SHARED ${SRC} ${AS_SRC} ${SCRIPT_BINDINGS})
ELSE(NOT WIN32)
  ADD_LIBRARY(wwscript STATIC ${SRC} ${AS_SRC} ${SE_PUB_H} ${SB_PUB_H} ${GP_PUB_H} ${SCRIPT_BINDINGS})
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NEL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(wwscript ${NELMISC_LIBRARY} ${NELGEORGES_LIBRARY})
SET_TARGET_PROPERTIES(wwscript PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
#  FOREACH(FILENAME ${SRC})
#    IF("${FILENAME}" MATCHES "stdpch.cpp")
#      SET_SOURCE_FILES_PROPERTIES(stdpch.cpp PROPERTIES COMPILE_FLAGS "/Ycstdpch.h")
#    ELSE("${FILENAME}" MATCHES "stdpch.cpp")
#      SET_SOURCE_FILES_PROPERTIES(${FILENAME} PROPERTIES COMPILE_FLAGS "/Yustdpch.h")
#    ENDIF("${FILENAME}" MATCHES "stdpch.cpp")
#  ENDFOREACH (FILENAME)

  SET_TARGET_PROPERTIES(wwscript PROPERTIES 
	LINK_FLAGS "/NODEFAULTLIB:libcmt"
	DEBUG_POSTFIX "_d"
	RELEASE_POSTFIX "_r"
	PROJECT_LABEL "Library: WW Scripting")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS wwscript LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
