#
# $Id: Makefile.am,v 1.1 2007/01/04 16:47:55 mattr Exp $
#

MAINTAINERCLEANFILES  = Makefile.in

#EXTRA_DIST            =	common.cfg \
#			frontend_service.cfg

#sbin_PROGRAMS         = frontend_service

#frontend_service_SOURCES = frontend_service.cpp connection_client.cpp

# End of Makefile.am

