#
# $Id: Makefile.am,v 1.3 2002-04-10 07:32:46 lecroart Exp $
#

clientdir		= ${database}/data/tiles
client_DATA		= alpha_noise_00.dds	\
			  alpha_noise_01.dds	\
			  alpha_noise_02.dds	\
			  alpha_noise_06.dds	\
			  alpha_noise_07.dds	\
			  alpha_noise_08.dds	\
			  alpha_noise_12.dds	\
			  alpha_noise_13.dds	\
			  alpha_noise_14.dds	\
			  alpha_noise_18.dds	\
			  alpha_noise_19.dds	\
			  alpha_noise_20.dds	\
			  alpha_noiseb_00.dds	\
			  alpha_noiseb_01.dds	\
			  alpha_noiseb_02.dds	\
			  alpha_noiseb_06.dds	\
			  alpha_noiseb_07.dds	\
			  alpha_noiseb_08.dds	\
			  alpha_noiseb_12.dds	\
			  alpha_noiseb_13.dds	\
			  alpha_noiseb_14.dds	\
			  alpha_noiseb_18.dds	\
			  alpha_noiseb_19.dds	\
			  alpha_noiseb_20.dds	\
			  alpha_noisec_00.dds	\
			  alpha_noisec_01.dds	\
			  alpha_noisec_02.dds	\
			  alpha_noisec_06.dds	\
			  alpha_noisec_07.dds	\
			  alpha_noisec_08.dds	\
			  alpha_noisec_12.dds	\
			  alpha_noisec_13.dds	\
			  alpha_noisec_14.dds	\
			  alpha_noisec_18.dds	\
			  alpha_noisec_19.dds	\
			  alpha_noisec_20.dds	\
			  bank.bank		\
			  bank.farbank		\
			  f-ice-neutre-02.dds	\
			  f-ice-neutre.dds	\
			  f-ice-trans-00.dds	\
			  f-ice-trans-01.dds	\
			  f-ice-trans-02.dds	\
			  f-ice-trans-03.dds	\
			  f-ice-trans-04.dds	\
			  f-ice-trans-05.dds	\
			  f-ice-trans-06.dds	\
			  f-ice-trans-07.dds	\
			  f-ice-trans-08.dds	\
			  f-ice-trans-09.dds	\
			  f-ice-trans-10.dds	\
			  f-ice-trans-11.dds	\
			  f-ice-trans-12.dds	\
			  f-ice-trans-13.dds	\
			  f-ice-trans-14.dds	\
			  f-ice-trans-15.dds	\
			  f-ice-trans-16.dds	\
			  f-ice-trans-17.dds	\
			  f-ice-trans-18.dds	\
			  f-ice-trans-19.dds	\
			  f-ice-trans-20.dds	\
			  f-ice-trans-21.dds	\
			  f-ice-trans-22.dds	\
			  f-ice-trans-23.dds	\
			  f-ice-trans-24.dds	\
			  f-ice-trans-25.dds	\
			  f-ice-trans-26.dds	\
			  f-ice-trans-27.dds	\
			  f-ice-trans-28.dds	\
			  f-ice-trans-29.dds	\
			  f-ice-trans-30.dds	\
			  f-ice-trans-31.dds	\
			  f-ice-trans-32.dds	\
			  f-ice-trans-33.dds	\
			  f-ice-trans-34.dds	\
			  f-ice-trans-35.dds	\
			  f-ice-trans-36.dds	\
			  f-ice-trans-37.dds	\
			  f-ice-trans-38.dds	\
			  f-ice-trans-39.dds	\
			  f-ice-trans-40.dds	\
			  f-ice-trans-41.dds	\
			  f-ice-trans-42.dds	\
			  f-ice-trans-43.dds	\
			  f-ice-trans-44.dds	\
			  f-ice-trans-45.dds	\
			  f-ice-trans-46.dds	\
			  f-ice-trans-47.dds	\
			  f-roc-128-a-01.dds	\
			  f-roc-128-a-02.dds	\
			  f-roc-128-a-03.dds	\
			  f-roc-128-a-04.dds	\
			  f-roc-256-a-01.dds	\
			  f-roc-256-a-02.dds	\
			  f-roc-256-a-03.dds	\
			  f-roc-256-a-04.dds	\
			  f-roc-256-a-05.dds	\
			  f-roc-256-a-06.dds	\
			  f-roc-256-a-07.dds	\
			  f-roc-256-a-08.dds	\
			  f-roc-256-a-09.dds	\
			  f-roc-256-a-10.dds	\
			  f-roc-trans-00.dds	\
			  f-roc-trans-01.dds	\
			  f-roc-trans-02.dds	\
			  f-roc-trans-03.dds	\
			  f-roc-trans-04.dds	\
			  f-roc-trans-05.dds	\
			  f-roc-trans-06.dds	\
			  f-roc-trans-07.dds	\
			  f-roc-trans-08.dds	\
			  f-roc-trans-09.dds	\
			  f-roc-trans-10.dds	\
			  f-roc-trans-11.dds	\
			  f-roc-trans-12.dds	\
			  f-roc-trans-13.dds	\
			  f-roc-trans-14.dds	\
			  f-roc-trans-15.dds	\
			  f-roc-trans-16.dds	\
			  f-roc-trans-17.dds	\
			  f-roc-trans-18.dds	\
			  f-roc-trans-19.dds	\
			  f-roc-trans-20.dds	\
			  f-roc-trans-21.dds	\
			  f-roc-trans-22.dds	\
			  f-roc-trans-23.dds	\
			  f-roc-trans-24.dds	\
			  f-roc-trans-25.dds	\
			  f-roc-trans-26.dds	\
			  f-roc-trans-27.dds	\
			  f-roc-trans-28.dds	\
			  f-roc-trans-29.dds	\
			  f-roc-trans-30.dds	\
			  f-roc-trans-31.dds	\
			  f-roc-trans-32.dds	\
			  f-roc-trans-33.dds	\
			  f-roc-trans-34.dds	\
			  f-roc-trans-35.dds	\
			  f-roc-trans-36.dds	\
			  f-roc-trans-37.dds	\
			  f-roc-trans-38.dds	\
			  f-roc-trans-39.dds	\
			  f-roc-trans-40.dds	\
			  f-roc-trans-41.dds	\
			  f-roc-trans-42.dds	\
			  f-roc-trans-43.dds	\
			  f-roc-trans-44.dds	\
			  f-roc-trans-45.dds	\
			  f-roc-trans-46.dds	\
			  f-roc-trans-47.dds	\
			  f-snow-128-a-01.dds	\
			  f-snow-128-a-02.dds	\
			  f-snow-128-a-03.dds	\
			  f-snow-128-a-04.dds	\
			  f-snow-256-a-01.dds	\
			  f-snow-256-a-02.dds	\
			  f-snow-256-a-03.dds	\
			  f-snow-256-a-04.dds	\
			  f-snow-256-a-05.dds	\
			  f-snow-256-a-06.dds	\
			  f-snow-256-a-07.dds	\
			  f-snow-256-a-08.dds	\
			  f-snow-256-a-09.dds	\
			  f-snow-256-a-10.dds	\
			  f-snow-256-a-11.dds	\
			  f-snow-256-a-12.dds	\
			  f-snow-256-a-13.dds	\
			  f-snow-256-a-14.dds	\
			  f-snow-256-a-15.dds	\
			  f-snow-256-a-16.dds	\
			  f-snow-256-a-17.dds	\
			  f-snow-256-a-18.dds	\
			  f-snow-256-a-19.dds	\
			  f-snow-256-a-20.dds	\
			  f-snow-trans-00.dds	\
			  f-snow-trans-01.dds	\
			  f-snow-trans-02.dds	\
			  f-snow-trans-03.dds	\
			  f-snow-trans-04.dds	\
			  f-snow-trans-05.dds	\
			  f-snow-trans-06.dds	\
			  f-snow-trans-07.dds	\
			  f-snow-trans-08.dds	\
			  f-snow-trans-09.dds	\
			  f-snow-trans-10.dds	\
			  f-snow-trans-11.dds	\
			  f-snow-trans-12.dds	\
			  f-snow-trans-13.dds	\
			  f-snow-trans-14.dds	\
			  f-snow-trans-15.dds	\
			  f-snow-trans-16.dds	\
			  f-snow-trans-17.dds	\
			  f-snow-trans-18.dds	\
			  f-snow-trans-19.dds	\
			  f-snow-trans-20.dds	\
			  f-snow-trans-21.dds	\
			  f-snow-trans-22.dds	\
			  f-snow-trans-23.dds	\
			  f-snow-trans-24.dds	\
			  f-snow-trans-25.dds	\
			  f-snow-trans-26.dds	\
			  f-snow-trans-27.dds	\
			  f-snow-trans-28.dds	\
			  f-snow-trans-29.dds	\
			  f-snow-trans-30.dds	\
			  f-snow-trans-31.dds	\
			  f-snow-trans-32.dds	\
			  f-snow-trans-33.dds	\
			  f-snow-trans-34.dds	\
			  f-snow-trans-35.dds	\
			  f-snow-trans-36.dds	\
			  f-snow-trans-37.dds	\
			  f-snow-trans-38.dds	\
			  f-snow-trans-39.dds	\
			  f-snow-trans-40.dds	\
			  f-snow-trans-41.dds	\
			  f-snow-trans-42.dds	\
			  f-snow-trans-43.dds	\
			  f-snow-trans-44.dds	\
			  f-snow-trans-45.dds	\
			  f-snow-trans-46.dds	\
			  f-snow-trans-47.dds	\
			  ice_base_256_01.dds	\
			  ice_base_256_02.dds	\
			  ice_base_256_03.dds	\
			  ice_base_256_04.dds	\
			  ice_base_256.dds

# End of Makefile.am
